fixes scrolling events on smallest phone size

--- a/app/globals.css
+++ b/app/globals.css
@@ -99,20 +99,18 @@ main {
 }
 
 .home-body::-webkit-scrollbar-track {
-  background-color: transparent; /* Makes the track clear */
+  background-color: transparent;
 }
 
-/* Customize the scrollbar thumb (the draggable element) */
 .home-body::-webkit-scrollbar-thumb {
-  background-color: #90ee90; /* Light green color */
-  border-radius: 10px; /* Optional: Adds rounded corners to the scrollbar thumb */
+  background-color: #90ee90;
+  border-radius: 10px;
   z-index: 999999999;
 }
 
-/* Customize the scrollbar width and height */
 .home-body::-webkit-scrollbar {
-  width: 8px; /* Adjust the width of the vertical scrollbar */
-  height: 8px; /* Adjust the height of the horizontal scrollbar, if visible */
+  width: 8px;
+  height: 8px;
 }
 
 .page-container,
@@ -209,7 +207,7 @@ textarea {
 
 .scroll-search-results ul {
   display: flex;
-  gap: 1.5rem;
+  gap: 15px;
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -252,7 +250,7 @@ textarea {
   }
 
   .scroll-search-results ul {
-    margin: 0 30px !important;
+    margin: 0 70px !important;
   }
 }
 
@@ -351,9 +349,9 @@ body.modal-open {
 }
 
 @media screen and (max-width: 900px) {
-  .highlight {
+  /* .highlight {
     font-size: small !important;
-  }
+  } */
 
   .highlights {
     /* width: 140px !important; */
@@ -371,8 +369,8 @@ body.modal-open {
   }
 }
 
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 400px) {
   .highlight-title {
     font-size: small !important;
   }
-}
+} */
